--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ openpyxl==3.0.7
 pytest-rerunfailures==10.1
 pandas==1.3.3
 
+
+gspread~=4.0.1
+oauth2client~=4.1.3
+google-api-python-client~=2.27.0
